--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                  ou
                                  <hr>
                                 </div>
-                                <button> <img src="/icons/icons8-google-48.png" alt="">
+                                <button> <img src="" alt="">
                                 <p>Entrar com Google</p></button>
               </form>
                        
